# DicomV5Viewer

./: .gitignore  build.gradle  settings.gradle
.github/workflows/: Android-CI-release.yml  Android-CI.yml  update-gradle-wrapper.yml
app/: build.gradle
app/src/main/java/info/hannes/dicom/: DicomApplication.kt  MainActivity.kt  PushToImebraPipe.kt
imebra/: AndroidManifest.xml  CMakeLists.txt  appveyor.yml  bitbucket-pipelines.yml  build.gradle  getVersion.py  license.rst  readme.rst
imebra/dicomheroCore6/: CMakeLists.txt  custom_framework.plist
imebra/dicomheroCore6/tests/: acseTest.cpp  bitTransformTest.cpp  buildImageForTest.cpp  colorConversionTest.cpp  corruptedFilesTest.cpp  dataSetTest.cpp  dateTimeHandlerTest.cpp  dicomCodecTest.cpp  dicomDirTest.cpp  dimseTest.cpp  drawBitmapTest.cpp  exceptionsTest.cpp  jpegCodecTest.cpp  lutTest.cpp  modalityVoilutTests.cpp  multipleImagesTest.cpp  numericHandlerTest.cpp  paletteTest.cpp  pipeTest.cpp  streamTest.cpp  stringHandlerTest.cpp  tcpTest.cpp  testsSettings.cpp  testsSettings.h  transformsChainTest.cpp  uidGeneratorsTest.cpp  unicodeStringHandlerTest.cpp  voilutTests.cpp
imebra/dicomheroCore6/tests/objectivec/: objectivecTest.mm
imebra/dicomheroCore6/wrappers/objectivec/include/dicomhero6_objc/: dicomhero.h  dicomhero6.h  dicomhero_acse.h  dicomhero_dataset.h  dicomhero_dicomDir.h  dicomhero_image.h  dicomhero_overlay.h  dicomhero_tag.h  dicomhero_transform.h  dicomhero_version.h  tagsEnumeration.h  uidsEnumeration.h
imebra/dicomheroCore6/wrappers/objectivec/src/: dicomhero_acse.mm  dicomhero_dataset.mm  dicomhero_dicomDir.mm  dicomhero_image.mm  dicomhero_overlay.mm  dicomhero_patientName.mm  dicomhero_tag.mm  dicomhero_transform.mm  dicomhero_version.mm
imebra/dicomheroCore6/wrappers/swig/: swig.i
imebra/docs/: Doxyfile  acse_classes.rst  add_to_project.rst  build_distribution.rst  changes_log.rst  compiling_imebra.rst  conf.py  dicom_data_classes.rst  dicomdir_classes.rst  imaging_classes.rst  imebra.graphml  imebra.mdj  imebra_requirements.xml  index.rst  quick_tour.rst  risks_requirements.rst  version_classes.rst
imebra/docs/doxygen_xml/: _v_o_i_description_8h.xml  _v_o_i_l_u_t_8h.xml  acse_8h.xml  age_8h.xml  base_stream_input_8h.xml  base_stream_output_8h.xml  base_uid_generator_8h.xml  change_transfer_syntax_8cpp.xml  classdicomhero_1_1_acse_corrupted_message_error.xml  classdicomhero_1_1_acse_error.xml  classdicomhero_1_1_acse_no_payload_error.xml  classdicomhero_1_1_acse_no_transfer_syntax_error.xml  classdicomhero_1_1_acse_presentation_context_not_requested_error.xml  classdicomhero_1_1_acse_rejected_association_error.xml  classdicomhero_1_1_acse_s_c_p_acse_protocol_version_not_supported_error.xml  classdicomhero_1_1_acse_s_c_p_no_reason_given_error.xml  classdicomhero_1_1_acse_s_c_p_presentation_local_limit_exceded_error.xml  classdicomhero_1_1_acse_s_c_p_presentation_reserved_error.xml  classdicomhero_1_1_acse_s_c_p_presentation_temporary_congestion_error.xml  classdicomhero_1_1_acse_s_c_u_application_context_name_not_supported_error.xml  classdicomhero_1_1_acse_s_c_u_called_a_e_t_not_recognized_error.xml  classdicomhero_1_1_acse_s_c_u_calling_a_e_t_not_recognized_error.xml  classdicomhero_1_1_acse_s_c_u_no_reason_given_error.xml  classdicomhero_1_1_acse_too_many_operations_invoked_error.xml  classdicomhero_1_1_acse_too_many_operations_performed_error.xml  classdicomhero_1_1_acse_wrong_command_id_error.xml  classdicomhero_1_1_acse_wrong_id_error.xml  classdicomhero_1_1_acse_wrong_response_id_error.xml  classdicomhero_1_1_acse_wrong_role_error.xml  classdicomhero_1_1_address_error.xml  classdicomhero_1_1_address_no_name_error.xml  classdicomhero_1_1_address_service_not_supported_error.xml  classdicomhero_1_1_address_try_again_error.xml  classdicomhero_1_1_age.xml  classdicomhero_1_1_association_base.xml  classdicomhero_1_1_association_message.xml  classdicomhero_1_1_association_s_c_p.xml  classdicomhero_1_1_association_s_c_u.xml  classdicomhero_1_1_base_stream_input.xml  classdicomhero_1_1_base_stream_output.xml  (+440 more)
imebra/examples/: CMakeLists.txt
imebra/examples/c++/changeTransferSyntax/: changeTransferSyntax.cpp
imebra/examples/c++/dicom2jpeg/: dicom2jpeg.cpp
imebra/examples/c++/dicomdirItems/: dicomdirItems.cpp
imebra/examples/c++/scpExample/: scpExample.cpp
